force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/talkdesk__Talkdesk_Activity__c.object-meta.xml
<CustomObject>
    <label>Talkdesk Activity</label>
    <nameField>
        <label>Talkdesk Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talkdesk Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>