force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Abandoned__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Abandoned__c</fullName>
    <formula>AND(CONTAINS(LOWER(TEXT(talkdesk__Type__c)), &quot;abandoned&quot;), NOT(CONTAINS(LOWER(TEXT(talkdesk__Type__c)), &quot;short&quot;)))</formula>
    <label>Is Abandoned</label>
    <type>Checkbox</type>
</CustomField>