force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Account__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Talkdesk Activities</relationshipLabel>
    <relationshipName>Talkdesk_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>