force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Advanced_Recording_Player__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Advanced_Recording_Player__c</fullName>
    <label>Advanced Recording Player</label>
    <length>255</length>
    <type>Text</type>
</CustomField>