force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__CallDuration__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__CallDuration__c</fullName>
    <formula>IF(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/(60*60))&lt;10, &quot;0&quot;&amp;TEXT(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/(60*60))),TEXT(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/(60*60))))
            &amp;&quot;:&quot; &amp;
            IF(MOD(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/60),60)&lt;10, &quot;0&quot;&amp;TEXT(MOD(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/60),60)),TEXT(MOD(FLOOR(ROUND(talkdesk__Talk_Time_sec__c,0)/60),60)))
            &amp;&quot;:&quot; &amp;
            IF(MOD(ROUND(talkdesk__Talk_Time_sec__c,0),(60))&lt;10, &quot;0&quot;&amp; TEXT(FLOOR(MOD(ROUND(talkdesk__Talk_Time_sec__c,0),(60)))), TEXT(FLOOR(MOD(ROUND(talkdesk__Talk_Time_sec__c,0),(60)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talk Time</label>
    <type>Text</type>
</CustomField>