force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Case__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Talkdesk Activities</relationshipLabel>
    <relationshipName>Talkdesk_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>