force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Channel__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
                <default>true</default>
                <label>Voice</label>
            </value>
            <value>
                <fullName>Chat</fullName>
                <isActive>false</isActive>
                <label>Chat</label>
            </value>
            <value>
                <fullName>MMS</fullName>
                <isActive>false</isActive>
                <label>MMS</label>
            </value>
            <value>
                <fullName>Video</fullName>
                <isActive>false</isActive>
                <label>Video</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>