force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Contact__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Talkdesk Activities</relationshipLabel>
    <relationshipName>Talkdesk_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>