force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>