force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Created_Time__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Created_Time__c</fullName>
    <description>Holds the time at when the Talkdesk Activity was created, following the value of Start Time field.</description>
    <label>Created Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>