force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__CSAT__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__CSAT__c</fullName>
    <label>CSAT</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>