force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__CSAT_Icon__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__CSAT_Icon__c</fullName>
    <formula>IF(talkdesk__CSAT__c &lt;= 0 || talkdesk__CSAT__c &gt; 5,
            &quot;&quot;,
            IMAGE(&quot;/resource/talkdesk__assets/csat_icons/&quot; &amp; TEXT(talkdesk__CSAT__c) &amp; &quot;-stars.png&quot;, TEXT(talkdesk__CSAT__c))
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT Icon</label>
    <type>Text</type>
</CustomField>