force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__CSAT_Response_del__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__CSAT_Response_del__c</fullName>
    <formula>IF ( ISBLANK( talkdesk__CSAT__c ), false, true)</formula>
    <label>CSAT Response</label>
    <type>Checkbox</type>
</CustomField>