force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__CSAT_Text_Response__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__CSAT_Text_Response__c</fullName>
    <description>Contains free form text from CSAT SMS response</description>
    <label>CSAT Text Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>