force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Day_of_Week__c</fullName>
    <formula>IF(ISBLANK(talkdesk__Created_Time__c), case(
            mod( dateValue(talkdesk__Start_Time__c + (talkdesk__user_timezone__c / 24)) - date(1900, 1, 7), 7),
            0, &quot;7 - Sunday&quot;,
            1, &quot;1 - Monday&quot;,
            2, &quot;2 - Tuesday&quot;,
            3, &quot;3 - Wednesday&quot;,
            4, &quot;4 - Thursday&quot;,
            5, &quot;5 - Friday&quot;,
            6, &quot;6 - Saturday&quot;,
            &quot;&quot;
            ), case(
            mod( DATE(
            VALUE(LEFT(talkdesk__Created_Time__c , 4)),
            VALUE(MID(talkdesk__Created_Time__c, 6, 2)),
            VALUE(MID(talkdesk__Created_Time__c , 9, 2))) - date(1900, 1, 7), 7),
            0, &quot;7 - Sunday&quot;,
            1, &quot;1 - Monday&quot;,
            2, &quot;2 - Tuesday&quot;,
            3, &quot;3 - Wednesday&quot;,
            4, &quot;4 - Thursday&quot;,
            5, &quot;5 - Friday&quot;,
            6, &quot;6 - Saturday&quot;,
            &quot;&quot;
            ))</formula>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>