force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Disposition_Code__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Disposition_Code__c</fullName>
    <label>Disposition Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attempting Contact</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Successful Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>