force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Disposition_Code_External_Id__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Disposition_Code_External_Id__c</fullName>
    <label>Disposition Code External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>