force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__DispositionCode__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__DispositionCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition Code</label>
    <referenceTo>talkdesk__Talkdesk_Disposition_Code__c</referenceTo>
    <relationshipLabel>Talkdesk Activities</relationshipLabel>
    <relationshipName>Talkdesk_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>