force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__End_Time__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>