force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__External_Number__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__External_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selected if phone call was forwarded or transferred to an external number</description>
    <label>Is External Number</label>
    <type>Checkbox</type>
</CustomField>