force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Half_Hour__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Half_Hour__c</fullName>
    <formula>IF(ISBLANK(talkdesk__Created_Time__c), mid(text(talkdesk__Start_Time__c + (talkdesk__user_timezone__c / 24)), 12, 2) &amp; IF(VALUE(MID(TEXT(talkdesk__Start_Time__c), 15, 2)) &lt; 30, &apos;:00&apos;,&apos;:30&apos;), mid(talkdesk__Created_Time__c, 12, 2) &amp; IF(VALUE(MID(talkdesk__Created_Time__c, 15, 2)) &lt; 30, &apos;:00&apos;,&apos;:30&apos;))</formula>
    <label>Half Hour of Day</label>
    <type>Text</type>
</CustomField>