force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Hour_of_Day__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Hour_of_Day__c</fullName>
    <formula>IF(ISBLANK(talkdesk__Created_Time__c), mid(text(talkdesk__Start_Time__c + (talkdesk__user_timezone__c / 24)), 12, 2) &amp; &apos;:00&apos;, mid(talkdesk__Created_Time__c, 12, 2) &amp; &apos;:00&apos;)</formula>
    <label>Hour of Day</label>
    <type>Text</type>
</CustomField>