force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__If_No_Answer__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__If_No_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selected if the &quot;If No Answer&quot; rules configured in Talkdesk for this phone number were executed for this call</description>
    <label>If No Answer</label>
    <type>Checkbox</type>
</CustomField>