force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__In_Business_Hours_del__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__In_Business_Hours_del__c</fullName>
    <defaultValue>true</defaultValue>
    <label>In Business Hours</label>
    <type>Checkbox</type>
</CustomField>