force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Is_Callback_del__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Is_Callback_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Callback</label>
    <type>Checkbox</type>
</CustomField>