force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>