force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Is_Mood_set__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Is_Mood_set__c</fullName>
    <formula>IF (talkdesk__MoodNumValue__c  &lt;1 || talkdesk__MoodNumValue__c &gt;5, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Mood set</label>
    <type>Checkbox</type>
</CustomField>