force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Is_Sample__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Is_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if the log entry was uploaded as a sample</description>
    <inlineHelpText>Denotes if the log entry was uploaded as a sample</inlineHelpText>
    <label>Is Sample</label>
    <type>Checkbox</type>
</CustomField>