force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__IVR_Options_raw__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__IVR_Options_raw__c</fullName>
    <label>IVR Options (raw)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>