force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Last_Trigger_Executed__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Last_Trigger_Executed__c</fullName>
    <label>Last trigger executed for TD Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>