force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Lead__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Talkdesk Activities</relationshipLabel>
    <relationshipName>Talkdesk_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>