force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Missed__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Missed__c</fullName>
    <formula>CONTAINS(LOWER(TEXT(talkdesk__Type__c)), &quot;missed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Missed</label>
    <type>Checkbox</type>
</CustomField>