force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Month_of_Year__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Month_of_Year__c</fullName>
    <formula>IF(ISBLANK(talkdesk__Created_Time__c), case(
            value(mid(text(talkdesk__Start_Time__c + (talkdesk__user_timezone__c / 24)), 6, 2)),
            1, &quot;January&quot;,
            2, &quot;February&quot;,
            3, &quot;March&quot;,
            4, &quot;April&quot;,
            5, &quot;May&quot;,
            6, &quot;June&quot;,
            7, &quot;July&quot;,
            8, &quot;August&quot;,
            9, &quot;September&quot;,
            10, &quot;October&quot;,
            11, &quot;November&quot;,
            &quot;December&quot;
            ), case(
            value(mid(talkdesk__Created_Time__c, 6, 2)),
            1, &quot;January&quot;,
            2, &quot;February&quot;,
            3, &quot;March&quot;,
            4, &quot;April&quot;,
            5, &quot;May&quot;,
            6, &quot;June&quot;,
            7, &quot;July&quot;,
            8, &quot;August&quot;,
            9, &quot;September&quot;,
            10, &quot;October&quot;,
            11, &quot;November&quot;,
            &quot;December&quot;
            ))</formula>
    <label>Month of Year</label>
    <type>Text</type>
</CustomField>