force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Mood_Face__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Mood_Face__c</fullName>
    <formula>CASE(
            TEXT(talkdesk__Mood_PL__c),

            &quot;happy&quot;, IMAGE(&quot;/resource/talkdesk__assets/mood_icons/mood--happy.png&quot;, &apos;Happy&apos;),

            &quot;neutral&quot;, IMAGE(&quot;/resource/talkdesk__assets/mood_icons/mood--neutral.png&quot;, &apos;Neutral&apos;),

            &quot;unhappy&quot;, IMAGE(&quot;/resource/talkdesk__assets/mood_icons/mood--unhappy.png&quot;, &apos;Unhappy&apos;),

            &quot;not_applicable&quot;, IMAGE(&quot;/resource/talkdesk__assets/mood_icons/mood--na.png&quot;, &apos;N/A&apos;),

            &quot;&quot;
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mood Face</label>
    <type>Text</type>
</CustomField>