force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Mood_PL__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Mood_PL__c</fullName>
    <label>Mood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>happy</fullName>
            </value>
            <value>
                <fullName>unhappy</fullName>
            </value>
            <value>
                <fullName>neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>