force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__MoodNumValue__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__MoodNumValue__c</fullName>
    <formula>CASE(TEXT(talkdesk__Mood_PL__c), &quot;happy&quot;, 5, &quot;neutral&quot;, 3, &quot;unhappy&quot;, 1,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mood Num Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>