force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Name_Id__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Name_Id__c</fullName>
    <label>Name Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>