force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Notes__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>