force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Talkdesk Activities</relationshipLabel>
    <relationshipName>Talkdesk_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>