force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Recording__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Recording__c</fullName>
    <label>Recording</label>
    <type>Url</type>
</CustomField>