force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Related_To__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Related_To__c</fullName>
    <label>Related To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>