force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Result__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Result__c</fullName>
    <label>Hangup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>Handled</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>