force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Ring_Groups__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Ring_Groups__c</fullName>
    <label>Ring Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admins</fullName>
            </value>
            <value>
                <fullName>Agents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>