force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__SLA__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__SLA__c</fullName>
    <formula>if(  ISPICKVAL(talkdesk__Channel__c , &quot;Voice&quot;), if(talkdesk__Wait_Time_sec__c &lt; 20,true,false), false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA</label>
    <type>Checkbox</type>
</CustomField>