force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__SMS_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__SMS_Job_Id__c</fullName>
    <description>Field relating the Talkdesk activity to a given instance of the SMS batch job</description>
    <label>SMS Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>