force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Speed_to_Answer_sec_del__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Speed_to_Answer_sec_del__c</fullName>
    <label>Speed to Answer (sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>