force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Start_Date__c</fullName>
    <formula>DATEVALUE(talkdesk__Start_Time__c +
            ( ($Setup.talkdesk__Talkdesk__c.talkdesk__UTC_Offset__c * 60) / 1440 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>