force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>