force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Status__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Status__c</fullName>
    <description>Delivery status of SMS message</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sending</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Undelivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>