force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Talkdesk_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Talkdesk_Phone_Number__c</fullName>
    <label>Talkdesk Phone</label>
    <type>Phone</type>
</CustomField>