force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Type__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Outbound_Missed</fullName>
            </value>
            <value>
                <fullName>Outbound_Voicemail</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Short_Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>