force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__User__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Talkdesk_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>