force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__user_timezone__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__user_timezone__c</fullName>
    <formula>(dateValue(dateTimeValue(text(today())+&quot; 00:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 01:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 02:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 03:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 04:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 05:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 06:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 07:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 08:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 09:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 10:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 11:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 12:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 13:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 14:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 15:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 16:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 17:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 18:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 19:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 20:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 21:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 22:00:00&quot;)) - today()) +
            (dateValue(dateTimeValue(text(today()) + &quot; 23:00:00&quot;)) - today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Timezone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>