force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__UserEmail__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__UserEmail__c</fullName>
    <label>User Email</label>
    <type>Email</type>
</CustomField>