force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/fields/talkdesk__Wait_Time_sec__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Wait_Time_sec__c</fullName>
    <label>Wait Time (sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>