force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/listViews/talkdesk__Abandoned_Calls.listView-meta.xml
<ListView>
    <fullName>talkdesk__Abandoned_Calls</fullName>
    <columns>talkdesk__Start_Time__c</columns>
    <columns>talkdesk__In_Business_Hours_del__c</columns>
    <columns>NAME</columns>
    <columns>talkdesk__Contact__c</columns>
    <columns>talkdesk__Ring_Groups__c</columns>
    <columns>talkdesk__Wait_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>talkdesk__Abandoned__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Abandoned Calls</label>
</ListView>