force-app/main/default/objects/talkdesk__Talkdesk_Activity__c/listViews/talkdesk__All.listView-meta.xml
<ListView>
    <fullName>talkdesk__All</fullName>
    <columns>talkdesk__Start_Time__c</columns>
    <columns>NAME</columns>
    <columns>talkdesk__Channel__c</columns>
    <columns>talkdesk__Contact__c</columns>
    <columns>talkdesk__Case__c</columns>
    <columns>talkdesk__User__c</columns>
    <columns>talkdesk__Ring_Groups__c</columns>
    <columns>talkdesk__CallDuration__c</columns>
    <columns>talkdesk__Notes__c</columns>
    <columns>talkdesk__Recording__c</columns>
    <columns>talkdesk__Disposition_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>